tests/rosetta/out/Prolog/ackermann-function.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-16T12:26:21Z
:- style_check(-singleton).
ackermann(M, N, _Res) :-
    ((M == 0) ->
        _Res is (N + 1).
        true
    ; true
    ),
    ((N == 0) ->
        ackermann((M - 1), 1, _V0),
        _Res = _V0.
        true
    ; true
    ),
    ackermann(M, (N - 1), _V1),
    ackermann((M - 1), _V1, _V2),
    _Res = _V2.

main(, _Res) :-
    ackermann(0, 0, _V0),
    term_string(_V0, _V1),
    string_concat("A(0, 0) = ", _V1, _V2),
    writeln(_V2),
    ackermann(1, 2, _V3),
    term_string(_V3, _V4),
    string_concat("A(1, 2) = ", _V4, _V5),
    writeln(_V5),
    ackermann(2, 4, _V6),
    term_string(_V6, _V7),
    string_concat("A(2, 4) = ", _V7, _V8),
    writeln(_V8),
    ackermann(3, 4, _V9),
    term_string(_V9, _V10),
    string_concat("A(3, 4) = ", _V10, _V11),
    writeln(_V11),

:- initialization(main, main).
main :-
    main(, _V0),
    _V0,
    true.
